--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "personalwebsite",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "private": true,
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -38,7 +39,8 @@
     "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.4",
-    "karma-ng-html2js-preprocessor": "~0.1.0"
+    "karma-ng-html2js-preprocessor": "~0.1.0",
+    "grunt-shell": "~0.5.0"
   },
   "engines": {
     "node": ">=0.8.0"
